--- a/src/index.html
+++ b/src/index.html
@@ -19,12 +19,12 @@
   <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Abril+Fatface|Courier+Prime|Ma+Shan+Zheng&display=swap" rel="stylesheet">
   <!-- <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet"> -->
-  <!-- <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.0/css/all.css" integrity="sha384-lZN37f5QGtY3VHgisS14W3ExzMWZxybE1SJSEsQp9S+oqd12jhcu+A56Ebc1zFSJ" crossorigin="anonymous"></style> -->
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.0/css/all.css" integrity="sha384-lZN37f5QGtY3VHgisS14W3ExzMWZxybE1SJSEsQp9S+oqd12jhcu+A56Ebc1zFSJ" crossorigin="anonymous"></style>
 <script src="http://code.jquery.com/jquery-latest.js"></script>
 </head>
 <body>
   <app-root></app-root>
 
-  <!-- <script src="https://kit.fontawesome.com/e802a17a48.js" crossorigin="anonymous"></script> -->
+  <script src="https://kit.fontawesome.com/e802a17a48.js" crossorigin="anonymous"></script>
 </body>
 </html>
